--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </nav> <!--FIM DO MENU-->
 
             <section class="principal">
-                <h2> Em Busca do Desenvolvedor Lendário</h2>
+                <h2> Em Busca da Desenvolvedora Lendária</h2>
                 <div class="links">
                     <a href="">Se inscreva!</a>
                 </div>
